--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: "proxima-nova-regular";
+    src: url("../assets/fonts/proxima-nova-regular.woff2");
+}
+
 /* 
   @see https://www.joshwcomeau.com/css/custom-css-reset/
 */
@@ -25,6 +30,7 @@
 html,
 body {
     height: 100%;
+    font-family: "proxima-nova-regular", sans-serif;
 }
 /*
   Typographic tweaks!
@@ -104,4 +110,21 @@ h6 {
 
 .rhap_progress-section {
     flex-direction: row-reverse;
+}
+
+/* lol */
+#_inner-path_ {
+    fill: transparent !important;
+}
+
+.portable-text p {
+    margin-top: 1rem;
+}
+
+.portable-text p:first-of-type {
+    margin-top: 0rem;
+}
+
+.portable-text *:last-child {
+    margin-bottom: 0rem;
 }
